--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,9 @@ services:
         - "9000:9000"
     depends_on:
         mysql:
-            - condition: service_healthy
+            condition: service_healthy
         redis:
-            - condition: service_healthy
+            condition: service_healthy
 
   nginx:
     image: nginx:alpine
