--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,9 @@ services:
     working_dir: /var/www
     volumes:
         - ./:/var/www:cached
-        - ./docker/php/php.ini:/usr/local/etc/php/conf.d/custom.ini
+        - ./docker/php/php.ini:/usr/local/etc/php/conf.d/php.ini
         - ./docker/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
         - ./docker/supervisord.conf:/etc/supervisor/supervisord.conf
-    environment:
-        - APP_ENV=${APP_ENV:-local}
-        - APP_DEBUG=${APP_DEBUG:-true}
     networks:
       - laravel-network
     ports:
