--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@uiw/react-md-editor": "^4.0.5",
-        "@vitejs/plugin-react": "^4.3.4",
+        "@vitejs/plugin-react": "^4.4.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -70,7 +70,9 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
-        "vite": "^6.0"
+        "vite": "^6.0",
+        "vite-plugin-pwa": "^1.0.0",
+        "workbox-window": "^7.3.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
