[Feat] Update Docker config

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -6,7 +6,7 @@ post_max_size = 64M
 max_input_vars = 3000
 default_charset = "UTF-8"
 
-[opcache]
+[Opcache]
 opcache.enable=0
 opcache.memory_consumption=512
 opcache.interned_strings_buffer=64
@@ -15,9 +15,19 @@ opcache.validate_timestamps=0
 opcache.save_comments=1
 opcache.fast_shutdown=0
 
+[File Uploads]
+upload_max_filesize = 64M
+post_max_size = 64M
+max_file_uploads = 20
+
 [Date]
 date.timezone = UTC
 
-[Session]
-session.save_handler = redis
-session.save_path = "tcp://redis:6379"
+[Error]
+display_errors = On
+display_startup_errors = On
+log_errors = On
+error_log = /var/www/storage/logs/php-error.log
+
+[Xdebug]
+xdebug.mode=coverage
