--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,14 +1,17 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name localhost;
 
     root /var/www/public;
-    index index.php index.html index.htm;
+    index index.php;
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    access_log /var/www/storage/logs/nginx_access.log;
+    error_log /var/www/storage/logs/nginx_error.log;
 
     charset utf-8;
+    client_max_body_size 100M;
+    client_body_buffer_size 128k;
 
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf)$ {
         expires 6M;
