--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,7 @@ jobs:
         run: npm ci
 
       - name: Build assets
-        run: npm run build:ssr
+        run: npm run build
 
       - name: Run code quality checks
         run: |
