[Fix] SSR Updates

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -94,6 +94,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          extensions: mbstring, dom, fileinfo, mysql, zip, gd, intl, redis, imagick
+          tools: composer:v2
+
+      - name: Install Composer dependencies
+        run: composer install --no-dev --prefer-dist --no-interaction --no-progress
+
+      - name: Generate Ziggy config
+        run: php artisan ziggy:generate
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -105,16 +118,6 @@ jobs:
 
       - name: Build assets (including SSR)
         run: npm run build:ssr
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.4'
-          extensions: mbstring, dom, fileinfo, mysql, zip, gd, intl, redis, imagick
-          tools: composer:v2
-
-      - name: Install Composer dependencies
-        run: composer install --no-dev --prefer-dist --no-interaction --no-progress
 
       - name: Verify SSR build
         run: |
