--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -4,7 +4,8 @@
             "name": "laravel",
             "script": "artisan",
             "args": ["inertia:start-ssr"],
-            "instances": 1,
+            "instances": 2,
+            "exec_mode": "cluster",
             "interpreter": "php",
             "wait_ready": true,
             "autorestart": true,
