--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -4,8 +4,7 @@
             "name": "laravel",
             "script": "artisan",
             "args": ["inertia:start-ssr"],
-            "instances": 2,
-            "exec_mode": "cluster",
+            "instances": 1,
             "interpreter": "php",
             "wait_ready": true,
             "autorestart": true,
@@ -14,7 +13,7 @@
             "error_file": "/home/deployer/laravel/shared/storage/logs/err.log",
             "out_file": "/home/deployer/laravel/shared/storage/logs/out.log",
             "log_file": "/home/deployer/laravel/shared/storage/logs/combined.log",
-            "time": true,
+            "time": true
         }
     ]
 }
