--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "name": "laravel-ssr",
+      "name": "laravel",
       "script": "/home/deployer/laravel/current/bootstrap/ssr/ssr.js",
       "instances": 1,
       "exec_mode": "fork",
@@ -10,9 +10,9 @@
       "autorestart": true,
       "max_restarts": 10,
       "watch": false,
-      "error_file": "/home/deployer/laravel/shared/storage/logs/ssr-err.log",
-      "out_file": "/home/deployer/laravel/shared/storage/logs/ssr-out.log",
-      "log_file": "/home/deployer/laravel/shared/storage/logs/ssr-combined.log",
+      "error_file": "/home/deployer/laravel/shared/storage/logs/err.log",
+      "out_file": "/home/deployer/laravel/shared/storage/logs/out.log",
+      "log_file": "/home/deployer/laravel/shared/storage/logs/combined.log",
       "time": true,
       "env": {
         "NODE_ENV": "production",
