--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,7 +57,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
-        run: composer install --optimize-autoloader --no-dev --prefer-dist --no-progress
+        run: composer install --prefer-dist --no-progress
 
       - name: Install NPM dependencies
         run: npm ci
@@ -105,7 +105,7 @@ jobs:
           tools: composer:v2
 
       - name: Install Composer dependencies
-        run: composer install --no-dev --prefer-dist --no-interaction --no-progress
+        run: composer install --optimize-autoloader --no-dev --prefer-dist --no-interaction --no-progress
 
       - name: Generate Ziggy config
         run: php artisan ziggy:generate
