--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,19 +9,6 @@ jobs:
   test:
     name: 🧪 Test & Lint
     runs-on: ubuntu-latest
-    services:
-#      mysql:
-#        image: mysql:8.0
-#        env:
-#          MYSQL_DATABASE: laravel_test
-#          MYSQL_ROOT_PASSWORD: secret
-#        ports:
-#          - 3306:3306
-#        options: >-
-#          --health-cmd="mysqladmin ping --silent"
-#          --health-interval=5s
-#          --health-timeout=2s
-#          --health-retries=2
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -30,7 +17,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          extensions: mbstring, dom, fileinfo, mysql, zip, gd, intl, redis, imagick
+          extensions: mbstring, dom, fileinfo, sqlite3, zip, gd, intl, redis, imagick
           coverage: xdebug
           tools: composer:v2
 
@@ -79,11 +66,7 @@ jobs:
       - name: Run tests (with Pest)
         env:
           DB_CONNECTION: sqlite
-#          DB_HOST: 127.0.0.1
-#          DB_PORT: 3306
-#          DB_DATABASE: laravel_test
-#          DB_USERNAME: root
-#          DB_PASSWORD: secret
+          DB_DATABASE: ':memory:'
           SESSION_DRIVER: array
         run: ./vendor/bin/pest
 
@@ -99,7 +82,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          extensions: mbstring, dom, fileinfo, mysql, zip, gd, intl, redis, imagick
+          extensions: mbstring, dom, fileinfo, sqlite3, zip, gd, intl, redis, imagick
           tools: composer:v2
 
       - name: Install Composer dependencies
