--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
         "react-markdown": "^10.1.0",
+        "recharts": "^2.15.3",
         "rehype-highlight": "^7.0.2",
         "rehype-raw": "^7.0.0",
         "rehype-sanitize": "^6.0.0",
