[Feat] Add File Manager

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -75,6 +75,15 @@ server {
         fastcgi_cache_revalidate on;
     }
 
+    # Storage files
+    location ^~ /storage/ {
+        alias /var/www/storage/app/public/;
+        try_files $uri $uri/ =404;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+        add_header X-Content-Type-Options "nosniff";
+    }
+
     location ~ /\.(?!well-known).* {
         deny all;
     }
