--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.6",
+        "@types/nprogress": "^0.2.3",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@uiw/react-md-editor": "^4.0.5",
@@ -56,6 +57,7 @@
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.503.0",
         "next-themes": "^0.4.6",
+        "nprogress": "^0.2.0",
         "pm2": "^6.0.6",
         "react": "^19.0.0",
         "react-day-picker": "^9.6.7",
