--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         - GROUP_ID=${GROUP_ID:-1000}
     container_name: ${COMPOSE_PROJECT_NAME}_app
     command: ["sh", "-c", "/usr/local/bin/start.sh"]
-    restart: unless-stopped
+    restart: on-failure
     working_dir: /var/www
     volumes:
         - ./:/var/www:cached
@@ -30,7 +30,7 @@ services:
   nginx:
     image: nginx:alpine
     container_name: ${COMPOSE_PROJECT_NAME}_nginx
-    restart: unless-stopped
+    restart: on-failure
     ports:
       - "80:80"
     volumes:
@@ -44,7 +44,7 @@ services:
   mysql:
     image: mysql:8.0
     container_name: ${COMPOSE_PROJECT_NAME}_mysql
-    restart: unless-stopped
+    restart: on-failure
     environment:
         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
         MYSQL_DATABASE: ${DB_DATABASE}
@@ -68,7 +68,7 @@ services:
   redis:
     image: redis:alpine
     container_name: ${COMPOSE_PROJECT_NAME}_redis
-    restart: unless-stopped
+    restart: on-failure
     healthcheck:
         test: [ "CMD", "redis-cli", "ping" ]
         interval: 5s
@@ -83,7 +83,7 @@ services:
   mailhog:
       image: mailhog/mailhog:latest
       container_name: ${COMPOSE_PROJECT_NAME}_mailhog
-      restart: unless-stopped
+      restart: on-failure
       ports:
           - "1025:1025"
           - "8025:8025"
@@ -95,7 +95,7 @@ services:
   typesense:
         image: typesense/typesense:0.25.1
         container_name: ${COMPOSE_PROJECT_NAME}_typesense
-        restart: unless-stopped
+        restart: on-failure
         ports:
             - "8108:8108"
         environment:
