--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
+        "ssr": "node resources/js/ssr.tsx",
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
