--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Dominik Jasiński - Technology and Programming Blog",
-    "short_name": "Dominik Jasiński",
+    "short_name": "Dominik Dev",
     "description": "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions",
     "start_url": "/",
     "display": "standalone",
